replace some 8-bit chars with TeX control sequences
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@182 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2016-07-03  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-4ht.tex,
+	* tex4ht-auto-script.tex,
+	* tex4ht-env.tex,
+	* tex4ht-sty.tex: 
+
 2016-07-02  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-4ht.tex (lettrine.4ht): delete the .lettrine-Agrave css
