--- a/lit/tex4ht-env.tex
+++ b/lit/tex4ht-env.tex
@@ -1350,7 +1350,7 @@ Contributed by Hans-Peter Kohler:
 
 
 
-Contributed: Andrzej Or³owski-Skoczyk; Modified: Wilfried Hennings:
+Contributed: Andrzej Or\l{}owski-Skoczyk; Modified: Wilfried Hennings:
 
 \<win32 openofficeDELETE\><<<
 <oo-alt-2>
