--- a/lit/tex4ht-sty.tex
+++ b/lit/tex4ht-sty.tex
@@ -11139,7 +11139,8 @@ Create saving at direct programming of HREF and HTAG in \`'<A>' coomands, becaus
 
 
 \Chapter{Background Material}
-\Link[http://www.diku.dk/students/turtle/trick.html]{}{}Tricks for TeX and LaTeX\EndLink{} (Collected by Peter Møller Neergaard)
+\Link[http://www.diku.dk/students/turtle/trick.html]{}{}Tricks for TeX
+and LaTeX\EndLink{} (Collected by Peter M\o{}ller Neergaard)
 
 
 
