--- a/lit/tex4ht-mkht.tex
+++ b/lit/tex4ht-mkht.tex
@@ -7,8 +7,8 @@
 % (2) perl -c mk4ht.perl
 % (3) xhlatex mkht-scripts.4ht "html,3"
 %
-% Copyright (C) 2009-2013 TeX Users Group
-% Copyright (C) 1997-2009 Eitan M. Gurari
+% Copyright 2009-2016 TeX Users Group
+% Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -489,9 +489,9 @@ dblatex file'.
 
 \<ms scripts\><<<-
 \Ii{,html}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  }
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env}
+\Iv{#1 -ewin32/tex4ht.env  }
 
 \make{ht}
 ->>>
@@ -547,9 +547,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{xh}
 ->>>
 
@@ -579,10 +579,10 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,uni-html4}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env
       -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{uxh}
 ->>>
 
@@ -608,9 +608,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,mathml}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env -cunihtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{xhm}
 ->>>
 
@@ -638,9 +638,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,mozilla}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  -cmozhtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env  -cmozhtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{mz}
 ->>>
 
@@ -668,9 +668,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,ooffice}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cmozhtf}
-\Iv{#1 -cooxtpipes -coo -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env -cmozhtf}
+\Iv{#1 -cooxtpipes -coo -ewin32/tex4ht.env -cvalidate }
 \make{oo}
 ->>>
 
@@ -701,9 +701,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,emspk}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  -cemspkhtf -s4es}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cemspk }
+\Iii{-itex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env  -cemspkhtf -s4es}
+\Iv{#1 -ewin32/tex4ht.env -cemspk }
 \make{es}
 ->>>
 
@@ -734,9 +734,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,jsml}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  -cjsmlhtf }
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cjsml }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env  -cjsmlhtf }
+\Iv{#1 -ewin32/tex4ht.env -cjsml }
 \make{js}
 ->>>
 
@@ -767,9 +767,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,jsmath}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  -cmozhtf }
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env  -cmozhtf }
+\Iv{#1 -ewin32/tex4ht.env  }
 \make{jm}
 ->>>
 
@@ -808,15 +808,15 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,tei}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env -cunihtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{tei}
 
 \Ii{,xhtml,tei-mml}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env -cunihtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{teim}
 ->>>
 
@@ -853,15 +853,15 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,docbook}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate -cdocbk }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env -cunihtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate -cdocbk }
 \make{db}
 
 \Ii{,xhtml,docbook-mml}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cunihtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate -cdocbk }
+\Iii{-i/tex4ht/ht-fonts/#1
+     -ewin32/tex4ht.env -cunihtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate -cdocbk }
 \make{dbm}
 ->>>
 
@@ -896,9 +896,9 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,xhtml,word}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env  -csymhtf}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -cvalidate }
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env  -csymhtf}
+\Iv{#1 -ewin32/tex4ht.env -cvalidate }
 \make{w}
 ->>>
 
@@ -930,10 +930,10 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,html,javahelp,xml,3.2,unicode}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env
       -cmozhtf -u10}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -d%1-doc\ -cjavahelp }
+\Iv{#1 -ewin32/tex4ht.env -d%1-doc\ -cjavahelp }
 \make{jh}
 ->>>
 
@@ -957,10 +957,10 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \Ii{,html,javahelp,xml,3.2,unicode,jh1.0}
-\Iii{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 
-     -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env
+\Iii{-i/tex4ht/ht-fonts/#1 
+     -ewin32/tex4ht.env
       -cmozhtf -u10}
-\Iv{#1 -ec:/tex4ht/texmf/tex4ht/base/win32/tex4ht.env -d%1-doc\ -cjavahelp1 }
+\Iv{#1 -ewin32/tex4ht.env -d%1-doc\ -cjavahelp1 }
 \make{jh1}
 ->>>
 
@@ -1198,7 +1198,7 @@ endfirstln
       @immediate@write16{| \input ./mkht.4ht }
       @immediate@write16{|}
       @immediate@write16{| \one{,html,...1...}}
-      @immediate@write16{| \two{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 ...2...}    % bat }
+      @immediate@write16{| \two{-i/tex4ht/ht-fonts/#1 ...2...}    % bat }
       @immediate@write16{| % \two{-i~/tex4ht/texmf/tex4ht/ht-fonts/#1 ...2...}   % unix }
       @immediate@write16{| \three{#1 ...3...}}
       @immediate@write16{| \make{foo}}
