--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -100,6 +100,9 @@
 
 \next
 
+\CodeLineNo % Set line numbers in the output, using %.
+% to change the comment char used: \srclineBOT{some symbol}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \expandafter \ifx \csname append:def\endcsname \relax
    \expandafter\def\csname append:def\endcsname#1#2{%
