--- a/protex/ProTex.sty
+++ b/protex/ProTex.sty
@@ -15,6 +15,7 @@
 % 
 % If you modify this program, changing the 
 % version identification would be appreciated.
+\immediate\write-1{version 2016-07-04}
 
 \expandafter\edef\csname :RestoreCatcodes\endcsname{%
    \catcode`\noexpand :=\the\catcode`:%
