--- a/lit/tex4ht-c.tex
+++ b/lit/tex4ht-c.tex
@@ -1,9 +1,7 @@
 % $Id$
-%         tex tex4ht-c
-% or   ht tex tex4ht-c
-
-% Copyright (C) 2009-2016 TeX Users Group
-% Copyright (C) 1996-2009 Eitan M. Gurari
+% tex tex4ht-c
+% Copyright 2009-2016 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -107,9 +105,9 @@
 \catcode`\:=12
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \input ProTex.sty
-\ifHtml    \AlProTex{c,<<<>>>,`,title,list,ClearCode,_^}
+
+\ifHtml    \AlProTex{c,<<<>>>,`,title,list,ClearCode,_^,CodeLineNo}
 
     \let\coDE=\<
     \def\<{\vfil\par\coDE}
