--- a/lit/tex4ht-t4ht.tex
+++ b/lit/tex4ht-t4ht.tex
@@ -1,8 +1,8 @@
 % $Id$
 % tex tex4ht-t4ht   or   ht tex tex4ht-t4ht
 %
-% Copyright 2009-2012 TeX Users Group
-% Copyright (C) 1998-2009 Eitan M. Gurari
+% Copyright 2009-2016 TeX Users Group
+% Copyright 1998-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -15,7 +15,7 @@
 \Preamble{xhtml,th4,sections+,xhtml}\EndPreamble    
 
    \input ProTex.sty
-   \AlProTex{perl,<<<>>>,`,title,list,_^}
+   \AlProTex{c,<<<>>>,`,title,list,_^,CodeLineNo}
 
 %\input tex4ht-cpright.tex
 
