--- a/protex/ChangeLog
+++ b/protex/ChangeLog
@@ -1,3 +1,8 @@
+2016-07-04  Karl Berry  <karl@freefriends.org>
+
+	* README: tweak text, upload 2016-07-04 release to CTAN
+	(ctan.org/pkg/protex).
+
 2016-06-06  Karl Berry  <karl@freefriends.org>
 
 	* ProTex.sty,
