disable \CodeLineNo for *.4ht
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@187 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,10 +1,14 @@
+2016-07-17  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-4ht.tex (\CodeLineNo): disable again since Michal's
+	compilation fails.
+
 2016-06-05  Karl Berry  <karl@freefriends.org>
 
 	* ProTex.sty,
 	* AlProTex.sty: symlinks to ../protex, so dev versions will be used.
 	* Makefile (common): depend on them.
 
-	* tex4ht-4ht.tex,
 	* tex4ht-c.tex,
 	* tex4ht-4ht.tex: enable new protex option CodeLineNo to generate
 	#line directives in the .c files, and %line comments in *.4ht.
