--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -100,8 +100,9 @@
 
 \next
 
-\CodeLineNo % Set line numbers in the output, using %.
+%\CodeLineNo % Set line numbers in the output, using %.
 % to change the comment char used: \srclineBOT{some symbol}
+% Sadly, this causes compilation to fail in unknown circumstances.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \expandafter \ifx \csname append:def\endcsname \relax
