--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -29088,7 +29088,7 @@ of  \''<a>' elements.
      \a:lettrine
      \ifx\LH:ante\@empty\else\f:lettrine\LH:ante\g:lettrine\fi
      \c:lettrine
-      \HCode{<span class="letter-}#2\HCode{">}#2\HCode{</span>}
+      \HCode{<span class="lettrine-}#2\HCode{">}#2\HCode{</span>}
      \b:lettrine\d:lettrine#3\e:lettrine
      \reset:LH:keys}
 %
