--- a/lit/tex4ht-mathml.tex
+++ b/lit/tex4ht-mathml.tex
@@ -1597,7 +1597,10 @@ configurations, respectively.
 >>>
 
 
-
+Use variant of original LaTeX macro used in \textunderscore
+\<configure mathml tex4ht\><<<
+\def\mathunderscore{\nfss@text{\HChar{95}}}
+>>>
 
 
 \<try inline par\><<<
