fix latex error(s) on first run
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@194 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/common-info.tex
+++ b/lit/common-info.tex
@@ -22,7 +22,13 @@
 % version identification would be appreciated.
 
 \expandafter\ifx \csname YES\HTML\endcsname\relax
-    \def\CleanComment{[0]}
+    % begin comment. 21/07/2016 (dg)
+    %   on first run \infoIVht expects \ConfigureHinput
+    %   ( \def\infoIVht#1\ConfigureHinput{..} )
+    %   so we feed it with "\ConfigureHinput" (no expansion here, merely a delimiter)
+    %   the rest is slurped until the "//".
+    % end
+    \def\CleanComment{[0]\ConfigureHinput\id:gobble}
 \else
     \let\saveCd=\<
     \def\<{\edef\FIRST{\the\inputlineno}\let\<\saveCd \saveCd}
