--- a/lit/tex4ht-info-mml.tex
+++ b/lit/tex4ht-info-mml.tex
@@ -12,7 +12,7 @@
    \def\HTML{infomml}
    \def\CONFIG{\jobname}
    \def\MAKETITLE{\author{Eitan M. Gurari}}
-   \def\next{\input mktex4ht.4ht   \endinput}
+   \def\next{\input ./mktex4ht.4ht \endinput}
    \expandafter\next
 \fi
 
