--- a/lit/tex4ht-info.tex
+++ b/lit/tex4ht-info.tex
@@ -38,45 +38,8 @@
 \fi
 
 
-%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%
-
-\expandafter\ifx \csname YES\HTML\endcsname\relax
-    \def\CleanComment{[0]}
-\else
-    \let\saveCd=\<
-    \def\<{\edef\FIRST{\the\inputlineno}\let\<\saveCd \saveCd}
-    \def\CleanComment#1tex4ht-info#2#3#4.#5>#6//{[#4%     <--jobname
-                  \if,\ifnum \FIRST=#6 .\else ,0\fi\fi]#6//}
-\fi
-
-\Comment{
-
-\string\ifx\string\infoIVht\string\UnDeF\string\def\string\infoIVht#1//{}\string\fi\string\infoIVht\CleanComment}{//
-
-}
-
-
-
-
-
-\def\>>>#1<<<{\bgroup\csname no:catcodes\endcsname0{255}{12}%
-   \csname no:catcodes\endcsname{13}{13}{13}% ^^M
-   \def\temp##1>>>{\egroup
-      \expandafter \def\csname #1\endcsname{##1}}\temp}
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
+\input{common-info}
+\input{common}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
