amend Makefile: set PATH, set -recorder option for tex/latex; move vcss and xmllint to ./extra-bin; unlink html4.4ht-released
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@195 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,18 @@
+2016-10-03 Deimantas Galcius <deimantas.galcius@gmail.com>
+
+	* Makefile (PATH): set PATH to look into $extra_bin and $ht_bin;
+	TeXLive 2016 (DVD) does not ship with 'xhlatex', so we find it in $ht_bin.
+	* Makefile (tex_options): set '-recorder' option to $tex_opts. We want to know
+	deps/derived files
+	* Makefile (clean): add '*.fls' for removal
+	* Makefile (ht tex): replace with $(HTTEX) which respects $tex_opts
+	* Makefile ("-d./" in htlatex calls): replace "-d./" with "".
+	"-d./" means move generated files to current folder, which does not make sense.
+	* Makefile (html4): Amend $(tex4ht_html4_derived) rule. No dependency on
+	html4.4ht-released
+	* Remove (html4.4-released): Delete file. (hopefully) not needed any more.
+	* Makefile: change $(dev_null) to "".
+
 2016-09-29 Deimantas Galcius <deimantas.galcius@gmail.com>
 
 	* common-info.tex (CleanComment): fix CleanComment to not
