Fixed mathml bug in ooffice mode - missing definition of columnlines
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@199 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-mathml.tex
+++ b/lit/tex4ht-mathml.tex
@@ -1137,6 +1137,7 @@ space, without having them ignored, must use &nbsp; or other
 >>>
 
 \<config array\><<<
+\let\columnlines\empty
 \Configure{halignTB<>}{array}{\HCode{\Hnewline
    \a:mathml equalrows="false"
    \a:mathml columnlines="\columnlines"
