--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,15 +1,25 @@
+2016-11-23  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-mathml.tex: Copyright 2016.
+
 2016-11-22 Michal Hoftich <michal.h21@gmail.com>
-	* tex4ht-mathml.tex (mathml.4ht): added \a:mathml commands before some
-	attributes where it was missing. This ensures use of mathml: prefix if it is
-	used in the output format
-	* tex4ht-ooffice.tex (ooffice-mml.4ht): Removed configurations of 'left' and
-	'right', default  configurations from mathml.4ht should be used instead
+
+	* tex4ht-mathml.tex (mathml.4ht): added \a:mathml commands
+	before some attributes where it was missing. This ensures use of
+	mathml: prefix if it is used in the output format
+
+	* tex4ht-ooffice.tex (ooffice-mml.4ht): Removed configurations
+	of 'left' and 'right', default configurations from mathml.4ht
+	should be used instead
 
 2016-11-21 Michal Hoftich <michal.h21@gmail.com>
-	* tex4ht-mathml.tex (mathml.4ht): added \let\columnlines\empty before use of \columnlines
-	in \Configure{halignTB<>}. It caused compilation error in ooffice mode.
+
+	* tex4ht-mathml.tex (mathml.4ht): added \let\columnlines\empty
+	before use of \columnlines in \Configure{halignTB<>}. It caused
+	compilation error in ooffice mode.
 
 2016-10-05 Deimantas Galcius <deimantas.galcius@gmail.com>
+
 	* Makefile (d) Experimental target "d" for dependency/derived files.
 	* Makefile (tohtmldir) move html files to html.dir
 	* Makefile (toderivedir) move derived files to derived.dir
