Added basic html5 support
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@202 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2016-11-25  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-html5.tex (html5.4ht): basic html5 template
+	* tex4ht-options.tex (tex4ht.4ht): added html5 option
+	* Makefile: generate html5 files
+
 2016-11-23  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-mathml.tex: Copyright 2016.
