copyright 2016, svn:keywords, ChangeLog lines <80 chars
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@204 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-html5.tex
+++ b/lit/tex4ht-html5.tex
@@ -1,9 +1,8 @@
-% $Id: tex4ht-moz.tex 65 2010-11-17 19:16:45Z karl $
+% $Id$
 % compile 3 times: latex tex4ht-moz
 %           or   xhlatex tex4ht-moz "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) 2000-2009 Eitan M. Gurari
+% Copyright 2016 TeX Users Group
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -26,7 +25,7 @@
 
 \<html5\><<<
 % html5.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2016- TeX Users Group
+% Copyright 2016 TeX Users Group
 |<TeX4ht copywrite|>
 >>>
 
