--- a/lit/tex4ht-options.tex
+++ b/lit/tex4ht-options.tex
@@ -1,8 +1,8 @@
 % $Id$
 % latex tex4ht-options   or    xhlatex tex4ht-options
 %
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) 2000-2009 Eitan M. Gurari
+% Copyright 2009-2016 TeX Users Group
+% Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -48,10 +48,9 @@ tail>>>
 \ifnum\the\catcode`\%=14\else \expandafter\edef\csname
   \string:RestoreCatcodes\endcsname{\catcode`\%|=\the
   \catcode`\%}\catcode`\%|=14\fi
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % tex4ht.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) |CopyYear.1997. Eitan M. Gurari
+% Copyright 2009-2016 TeX Users Group
+% Copyright |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 |<save catcodes|>
 |<note about tex4ht.usr|>
