Added fontspec support
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@205 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -21590,9 +21590,15 @@ gets something wrong there.
 >>>
 
 
+We can't use styles from .htf files with fontspec, so we must add meaning to
+font commands
 
-
-
+\<configure html4 fontspec\><<<
+\Configure{textit}{\Tg<i>}{\Tg</i>}
+\Configure{textbf}{\Tg<strong>}{\Tg</strong>}
+\Configure{textsc}{\Tg<span class="small-caps">}{\Tg</span>}
+\Css{.small-caps{font-variant: small-caps;}}
+>>>
 
 
 
@@ -21663,7 +21669,6 @@ them in the same row.
 \Configure{enoteformat}
    {\Link{enmark-\endnoteN}{ennote-\endnoteN}} {\EndLink}
 >>>
-
 
 
 
