Added fontspec fo mktex4ht-cnf.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@206 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/mktex4ht-cnf.tex
+++ b/lit/mktex4ht-cnf.tex
@@ -312,4 +312,6 @@
 \AddFile{9}{galician}
 \AddFile{9}{greek}
 \AddFile{9}{exam}
+\AddFile{9}{fontspec}
+\AddFile{9}{xetex-fontspec}
 %\AddFile{9}{mktex4ht}
