Fixed multirow support
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@207 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,4 +1,9 @@
 2016-11-27  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (multirow.4ht): fixed support for package multirow
+
+2016-11-27  Michal Hoftich  <michal.h21@gmail.com>
+
 	* mktex4ht-cnf.tex: added requests for fontspec
 	* Makefile: added mktex4ht-cnf.tex as dependency for tex4ht-cond4ht.tex
 
