--- a/lit/mktex4ht-cnf.tex
+++ b/lit/mktex4ht-cnf.tex
@@ -1,3 +1,11 @@
+% $Id$
+% Copyright 2016 TeX Users Group    
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
+%
+% Manually-maintained file listing *.4ht files created by tex4ht-4ht.tex.
+% Read by tex4ht-cond4ht.
+%
 \AddFile{0}{Preamble}
 \AddFile{0}{tex4ht}
 \AddFile{0}{tex4ht2}
@@ -313,5 +321,5 @@
 \AddFile{9}{greek}
 \AddFile{9}{exam}
 \AddFile{9}{fontspec}
-\AddFile{9}{xetex-fontspec}
+\AddFile{9}{fontspec-xetex}
 %\AddFile{9}{mktex4ht}
