--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,9 +1,12 @@
+2016-12-08  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-cond4ht.tex: copyright 2016.
+
 2016-12-07  Michal Hoftich  <michal.h21@gmail.com>
 
-	* tex4ht-env.tex (tex4ht.env): moved default picture conversion scripts
-	below alternative scripts, in order to enable their selection with -c option
-	of t4ht
-
+	* tex4ht-env.tex (tex4ht.env): moved default picture conversion
+	scripts below alternative scripts, in order to enable their
+	selection with -c option of t4ht.
 
 2016-12-04  Michal Hoftich  <michal.h21@gmail.com>
 
